--- a/index.html
+++ b/index.html
@@ -239,15 +239,17 @@
               <h4>Bachelor of Science in Mathematical Sciences (Computer Science)</h4>
               <h5>2017 - 2019</h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
-              <a href="#open-modal">View Degree</a>
-              <div id="open-modal" class="modal-window">
-                <div>
-                  <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
-                  <h1>CSS Modal</h1>
-                  <div><p><iframe src="assets/documents/undergrad.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%"
-                    height="500px"></iframe></p></div>
+              <a class="trigger" href="javascript:;">View Degree</a>
+              <div class="modal-wrapper">
+                <div class="modal">
+                  <a class="btn-close trigger" href="javascript:;"></a>
+                  <div>
+                    <p><iframe src="assets/documents/undergrad.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%"
+                        height="500px"></iframe></p>
+                  </div>
                 </div>
               </div>
+
             </div>
             <div class="resume-item">
               <h4>National Senior Certificate</h4>
@@ -256,6 +258,7 @@
               <p>Obtained with 86.4% average over 8 subjects</p>
             </div>
           </div>
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
