--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="index.html#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="index.html#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
-          <li><a href="index.html#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
-          <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
+          <li><a href="#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
+          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
