--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Jean-Pierre van Zyl</h1>
       <p>I'm <span class="typed"
-          data-typed-items="a Student, a Developer, an AI Enthusiast, an Idiot, a Coder, a Pessimist"></span></p>
+          data-typed-items="a Student, a Developer, an AI Enthusiast, a Noodle, a Coder, a Realist"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -109,7 +109,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpg" class="img-fluid rounded-circle" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Personal information.</h3>
@@ -239,17 +239,11 @@
               <h4>Bachelor of Science in Mathematical Sciences (Computer Science)</h4>
               <h5>2017 - 2019</h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
-              <a class="trigger" href="javascript:;">View Degree</a>
-              <div class="modal-wrapper">
-                <div class="modal">
-                  <a class="btn-close trigger" href="javascript:;"></a>
-                  <div>
-                    <p><iframe src="assets/documents/undergrad.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%"
-                        height="500px"></iframe></p>
-                  </div>
-                </div>
+              <button type="button" class="btn btn-outline-primary" onclick="hideshowDiv()">View Degree</button>
+              <div id="hidden-div" class="hidden-div">
+                <p><iframe src="assets/documents/undergrad.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%"
+                    height="500px"></iframe></p>
               </div>
-
             </div>
             <div class="resume-item">
               <h4>National Senior Certificate</h4>
