testing autodownload error from pdf to jpg

--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
               <button type="button" class="btn btn-outline-primary" onclick="hideshowDiv()">View Degree</button>
               <div id="hidden-div" class="hidden-div">
-                <p><iframe src="assets/documents/undergrad.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%"
-                    height="500px"></iframe></p>
+                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                <!--<p><iframe src="assets/documents/undergrad.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%"
+                    height="500px"></iframe></p>-->
               </div>
             </div>
             <div class="resume-item">
