--- a/index.html
+++ b/index.html
@@ -96,34 +96,34 @@
             Engelbrecht. <br>
             For the past few years that I've been studying here, I've stayed in Majuba Men's Residence and had the
             privilege to serve on the leadership of the House.
-            My experiences on the House Committe, as Primarius and as Vice-Primarius have taught me a lot about myself
+            My experiences on the House Committee, as Primarius and as Vice-Primarius have taught me a lot about myself
             and made me a more rounded person.
             These experiences have taught me how to lead, manage my time, make sacrifices and to be part of something
             bigger than myself. <br>
-            Research has become my passion and I aim to continue making contributions to the CI community.
+            Research has become my passion and I aim to continue making contributions to the Computational Intelligence community.
             Today we search for new applications and adaptations of Set-Based Particle Swarm Optimization algorithms, or
-            develop new exloration mechanisms for dynamic environments;
+            develop new exploration mechanisms for dynamic environments;
             but fundamentally, it's the pursuit of knowledge that has fascinated mankind for millennia.
           </p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid rounded-circle" alt="">
+            <img src="assets/img/profile-img.jpg" height="100%" width="100%" class="img-fluid rounded-circle" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Personal information.</h3>
             <p class="font-italic">
-              I like open-source, but like money more. But I donate to Wikipedia so I guess that's a start.<br>
+              I like open-source, but I like money more. Although I donate to Wikipedia so I guess that's a start.<br>
               The only social media I have is Linkedin, for a few reasons. Most social media platforms are designed to
-              subconsiously addict you to their product, I don't appriciate that.
+              subconsiously addict you to their product, I don't appreciate that.
               Many of these tech companies follow the privacy laws (which can't keep up with innovation to start with)
               just enough so that their actions aren't classified as spying;
               but they have no respect for your privacy.<br>
-              Removing social media from you life can be described as liberating, and certainly makes you more
+              Removing social media from your life can be described as liberating, and certainly makes you more
               productive. A majorly overlooked aspect of our 21st centuary lives is our relationship with our
               smartphones.
-              Make sure you use your smartphone, not that it controls you.
+              Make sure that you use your smartphone, and not that it controls you.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -211,13 +211,14 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Hard-working individual with a well rounded set of skills stemming from years of experience in sudent
-            leadership and extra-mural activities including musical theater and sport.</p>
+          <p>I am a hard-working individual with a well-rounded set of skills stemming from years of experience in sudent
+            leadership and extra-mural activities including musical theatre and sport.
+            I aim to live a balanced lifestyle to ensure that I always perform to the best of my abilities.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Jean-Pierre van Zyl</h4>
               <p><em>Brief overview of experience</em></p>
@@ -230,20 +231,29 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Science (Honnours) in Computer Science (Cum Laude)</h4>
+              <h4>Master of Science in Computer Science (In progress)</h4>
+              <h5>2021 - </h5>
+              <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
+              <p>Currently studying under Professor A.P. Engelbrecht</p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Science (Honours) in Computer Science (Cum Laude)</h4>
               <h5>2020 - 2020</h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
               <p>Obained Cum Laude</p>
+              <a id="honours-hyperlink" href="javascript:hideshowHonours();">View Degree</a>
+              <div id="honours-hidden-div" class="hidden-div">
+                <img src="assets/img/undergrad.png" class="img-fluid" alt="">
+              </div>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science in Mathematical Sciences (Computer Science)</h4>
               <h5>2017 - 2019</h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
-              <button type="button" class="btn btn-outline-primary" onclick="hideshowDiv()">View Degree</button>
-              <div id="hidden-div" class="hidden-div">
-                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                <!--<p><iframe src="assets/documents/undergrad.pdf#toolbar=0&navpanes=0&scrollbar=0" width="100%"
-                    height="500px"></iframe></p>-->
+              <p>Completed a BSc in Mathematical Sciences with a main stream in Computer Science</p>
+              <a id="undergrad-hyperlink" href="javascript:hideshowUndergrad();">View Degree</a>
+              <div id="undergrad-hidden-div" class="hidden-div">
+                <img src="assets/img/undergrad.png" class="img-fluid" alt="">
               </div>
             </div>
             <div class="resume-item">
@@ -275,7 +285,7 @@
               <ul>
                 <li>NRMQL is an AI-driven investment company using cutting-edge technology to disrupt the industry</li>
                 <li><a href="https://nmrql.com/">nrmql.com</a></li>
-                <li>Position provided first intoduction to the Fintech industry</li>
+                <li>Position provided first introduction to the Fintech industry</li>
                 <li>Contributed to the expansion of the set of tools used to trade securities</li>
                 <li>Languages used: Python</li>
               </ul>
@@ -291,7 +301,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Research Experience</h2>
-          <p>All this stuff is fake too. How does one even judge an open-ended skill as a percentage?</p>
+          <p>All this stuff is fake. How does one even judge an open-ended skill as a percentage? But I see all the kids are doing it.</p>
         </div>
         <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
@@ -405,7 +415,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Unfortunalty all previous works are covered under NDAs, but OSS to follow in the future</p>
+          <p>Unfortunately all previous works are covered under NDAs, but OSS to follow in the future</p>
         </div>
         <!--
         <div class="row" data-aos="fade-up">
