added CV download

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
               <h4>Jean-Pierre van Zyl</h4>
               <p><em>Brief overview of experience</em></p>
               <ul>
+                <li><a href="assets/documents/jeanpierrevanzyl_cv.pdf" target="_blank">Download CV</a></li>
                 <li>Currently hold BSc (Hons) in Computer Science</li>
                 <li>Work experience consists of multiple internships</li>
                 <li>Multiple years spent serving on student leadership</li>
@@ -234,14 +235,18 @@
               <h4>Master of Science in Computer Science (In progress)</h4>
               <h5>2021 - </h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
-              <p>Currently studying under Professor A.P. Engelbrecht</p>
+              <ul>
+                <li>Currently studying under Professor A.P. Engelbrecht</li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science (Honours) in Computer Science (Cum Laude)</h4>
               <h5>2020 - 2020</h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
-              <p>Obained Cum Laude</p>
-              <a id="honours-hyperlink" href="javascript:hideshowHonours();">View Degree</a>
+              <ul>
+                <li>Obained Cum Laude</li>
+                <li><a id="honours-hyperlink" href="javascript:hideshowHonours();">View Degree</a></li>
+              </ul>
               <div id="honours-hidden-div" class="hidden-div">
                 <img src="assets/img/undergrad.png" class="img-fluid" alt="">
               </div>
@@ -250,8 +255,10 @@
               <h4>Bachelor of Science in Mathematical Sciences (Computer Science)</h4>
               <h5>2017 - 2019</h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
-              <p>Completed a BSc in Mathematical Sciences with a main stream in Computer Science</p>
-              <a id="undergrad-hyperlink" href="javascript:hideshowUndergrad();">View Degree</a>
+              <ul>
+                <li>Completed a BSc in Mathematical Sciences with a main stream in Computer Science</li>
+                <li><a id="undergrad-hyperlink" href="javascript:hideshowUndergrad();">View Degree</a></li>
+              </ul>
               <div id="undergrad-hidden-div" class="hidden-div">
                 <img src="assets/img/undergrad.png" class="img-fluid" alt="">
               </div>
@@ -260,7 +267,9 @@
               <h4>National Senior Certificate</h4>
               <h5>2012 - 2016</h5>
               <p><em>Fairmont High School, Durbanville, RSA</em></p>
-              <p>Obtained with 86.4% average over 8 subjects</p>
+              <ul>
+                <li>Obtained with 86.4% average over 8 subjects</li>
+              </ul>
             </div>
           </div>
 
@@ -273,7 +282,7 @@
               <ul>
                 <li>Polymorph is a software solutions company with wide range of focus and experience across industries
                 </li>
-                <li><a href="https://www.polymorph.co.za/">polymorph.co.za</a></li>
+                <li><a href="https://www.polymorph.co.za/" target="_blank">polymorph.co.za</a></li>
                 <li>Worked as a part of the in-house R&amp;D team which drove the expansion of the company's IoT work to
                   include Computer Vision at the Edge</li>
               </ul>
@@ -284,7 +293,7 @@
               <p><em>NMRQL Research, Stellenbosch, RSA</em></p>
               <ul>
                 <li>NRMQL is an AI-driven investment company using cutting-edge technology to disrupt the industry</li>
-                <li><a href="https://nmrql.com/">nrmql.com</a></li>
+                <li><a href="https://nmrql.com/" target="_blank">nrmql.com</a></li>
                 <li>Position provided first introduction to the Fintech industry</li>
                 <li>Contributed to the expansion of the set of tools used to trade securities</li>
                 <li>Languages used: Python</li>
