added honours degree scan

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <li><a id="honours-hyperlink" href="javascript:hideshowHonours();">View Degree</a></li>
               </ul>
               <div id="honours-hidden-div" class="hidden-div">
-                <img src="assets/img/undergrad.png" class="img-fluid" alt="">
+                <img src="assets/img/honours.png" class="img-fluid" alt="">
               </div>
             </div>
             <div class="resume-item">
