--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.google.co.za/" class="google"><i class="bx bx-search"></i></a>
+          <a href="https://www.researchgate.net/profile/Jean_Pierre_Van_Zyl" class="researchgate"><i class="bx bx-pen"></i></a>
         </div>
       </div>
 
@@ -93,13 +93,13 @@
           <p>Hello traveller, welcome to my personal portfolio.<br> I'm Jean-Pierre, a Stellenbosch University Computer
             Science student.
             I'm currently doing my Masters degree in Computational Intelligence under the supervision of Professor A.P.
-            Engelbrecht. <br>
+            Engelbrecht. <br><br>
             For the past few years that I've been studying here, I've stayed in Majuba Men's Residence and had the
             privilege to serve on the leadership of the House.
             My experiences on the House Committee, as Primarius and as Vice-Primarius have taught me a lot about myself
             and made me a more rounded person.
             These experiences have taught me how to lead, manage my time, make sacrifices and to be part of something
-            bigger than myself. <br>
+            bigger than myself. <br><br>
             Research has become my passion and I aim to continue making contributions to the Computational Intelligence community.
             Today we search for new applications and adaptations of Set-Based Particle Swarm Optimization algorithms, or
             develop new exploration mechanisms for dynamic environments;
@@ -109,7 +109,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" height="100%" width="100%" class="img-fluid rounded-circle" alt="">
+            <img src="assets/img/profile-img.jpg" height="100%" width="100%" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Personal information.</h3>
@@ -128,11 +128,11 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 25/08/1998</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong><a
                       href="https://jeanpierrevanzyl.github.io/"> jeanpierrevanzyl.github.io</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> You'll have to buy me a drink first
                   </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Institution:</strong> Stellenbosch University</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Stellenbosch, RSA</li>
                 </ul>
               </div>
@@ -211,7 +211,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am a hard-working individual with a well-rounded set of skills stemming from years of experience in sudent
+          <p>I am a hard-working individual with a well-rounded set of skills stemming from years of experience in student
             leadership and extra-mural activities including musical theatre and sport.
             I aim to live a balanced lifestyle to ensure that I always perform to the best of my abilities.</p>
         </div>
@@ -424,7 +424,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Unfortunately all previous works are covered under NDAs, but OSS to follow in the future</p>
+          <p>Unfortunately all previous works are covered under NDAs, but open-source projects to follow in the future</p>
         </div>
         <!--
         <div class="row" data-aos="fade-up">
