--- a/index.html
+++ b/index.html
@@ -375,10 +375,10 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bxs-book"></i></div>
-            <h4 class="title"><a href="">Polynomial Approximation Using Set-Based Particle Swarm Optimization</a></h4>
+            <h4 class="title"><a href="assets/documents/SBPSO_for_polynomial_induction.pdf">Polynomial Approximation Using Set-Based Particle Swarm Optimization</a></h4>
             <p class="description">The SBPSO is an adaptation of the standard PSO for problems in a discrete search
               space.
-              This algorithm was applied to solve regression problems.
+              This algorithm was applied to solve regression problems and published for the <a href="http://www.iasei.org/icsi2021/" target="_blank">International Conference on Swarm Intelligence (2021)</a>.
             </p>
           </div>
           <!--
