updated work experience to include Merlynn

--- a/index.html
+++ b/index.html
@@ -276,13 +276,20 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Part-time</h4>
+              <h5>Mar 2021</h5>
+              <p><em>Merlynn Intelligence Technologies, Centurion, RSA</em> (<a href="https://www.merlynn-ai.com/" target="_blank">merlynn-ai.co.za</a>)</p>
+              <ul>
+                <li>Merlynn is an artificial intelligence firm developing customized AI solutions, without the need for historical data.</li>
+                <li>Worked remotely while studying my MSc, contributed to expanding the capabilities of their AI systems.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Intern</h4>
               <h5>Jan 2021 - Feb 2021</h5>
-              <p><em>Polymorph Systems, Stellenbosch, RSA </em></p>
+              <p><em>Polymorph Systems, Stellenbosch, RSA</em> (<a href="https://www.polymorph.co.za/" target="_blank">polymorph.co.za</a>)</p>
               <ul>
-                <li>Polymorph is a software solutions company with wide range of focus and experience across industries
-                </li>
-                <li><a href="https://www.polymorph.co.za/" target="_blank">polymorph.co.za</a></li>
+                <li>Polymorph is a software solutions company with wide range of focus and experience across industries</li>
                 <li>Worked as a part of the in-house R&amp;D team which drove the expansion of the company's IoT work to
                   include Computer Vision at the Edge</li>
               </ul>
@@ -290,13 +297,11 @@
             <div class="resume-item">
               <h4>Intern</h4>
               <h5>Nov 2020 - Dec 2020</h5>
-              <p><em>NMRQL Research, Stellenbosch, RSA</em></p>
+              <p><em>NMRQL Research, Stellenbosch, RSA</em> (<a href="https://nmrql.com/" target="_blank">nrmql.com</a>)</p>
               <ul>
                 <li>NRMQL is an AI-driven investment company using cutting-edge technology to disrupt the industry</li>
-                <li><a href="https://nmrql.com/" target="_blank">nrmql.com</a></li>
                 <li>Position provided first introduction to the Fintech industry</li>
                 <li>Contributed to the expansion of the set of tools used to trade securities</li>
-                <li>Languages used: Python</li>
               </ul>
             </div>
           </div>
