added portfolio work

--- a/luxor-details.html
+++ b/luxor-details.html
@@ -58,7 +58,7 @@
 
         <nav class="nav-menu">
             <ul>
-                <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+                <li class="active"><a href="index.html#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
                 <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
                 <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                 <li><a href="index.html#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
@@ -81,10 +81,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>LUXOR Trader Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>LUXOR Trader Details</li>
           </ol>
         </div>
 
@@ -98,27 +98,31 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-1/sonks-portfolio-details.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-1/new-approach-trading-cover.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-1/chart-analysis-portfolio-details.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Automated Trader</li>
+              <li><strong>Client</strong>: NMRQL Research</li>
+              <li><strong>Project date</strong>: November 2020 - December 2020</li>
+              <li><strong>Project URL</strong>: <a href="#">https://github.com/jeanpierrevanzyl/LUXOR-trader</a></li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>This is an example of portfolio detail</h2>
+          <h2>LUXOR Trading system</h2>
           <p>
-            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+            This repo contains a clone of the LUXOR trading system, written in Python, as described by Emilio Tomasini and Urban Jaekle.
+
+            This was a part-time project and is not intended for commercial use or distribution. All works contained in this repo are for educational purposes and should not be used to make real-world financial decisions.
+
+            This is not financial advice nor should it be used to gather stock insights
           </p>
         </div>
 
