--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -46,41 +46,45 @@
   <header id="header">
     <div class="d-flex flex-column">
 
-      <div class="profile">
-        <a href="index.html"><img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle"></a>
-        <h1 class="text-light"><a href="index.html">Jean-Pierre van Zyl</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.researchgate.net/profile/Jean_Pierre_Van_Zyl" class="researchgate"><i class="bx bx-pen"></i></a>
+        <div class="profile">
+            <a href="index.html"><img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle"></a>
+            <h1 class="text-light"><a href="index.html">Jean-Pierre van Zyl</a></h1>
+            <div class="social-links mt-3 text-center">
+                <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i
+                        class="bx bxl-linkedin"></i></a>
+                <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
+                <a href="https://www.researchgate.net/profile/Jean_Pierre_Van_Zyl" class="researchgate"><i
+                        class="bx bx-pen"></i></a>
+            </div>
         </div>
-      </div>
 
-      <nav class="nav-menu">
-        <ul>
-          <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
-          <li><a href="#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+        <nav class="nav-menu">
+            <ul>
+                <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+                <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+                <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+                <li><a href="#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
+                <li><a href="#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
+                <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+                <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
-        </ul>
-      </nav><!-- .nav-menu -->
-      <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
+            </ul>
+        </nav><!-- .nav-menu -->
+        <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
     </div>
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Jean-Pierre van Zyl</h1>
-      <p>I'm <span class="typed"
-          data-typed-items="a Student, a Developer, an AI Enthusiast, a Noodle, a Coder, a Realist"></span></p>
+        <h1>Jean-Pierre van Zyl</h1>
+        <p>I'm <span class="typed"
+                data-typed-items="a Student, a Developer, an AI Enthusiast, a Noodle, a Coder, a Realist"></span></p>
     </div>
-  </section><!-- End Hero -->
+  </section>
+  <!-- End Hero -->
 
   <main id="main">
 
@@ -429,33 +433,33 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Unfortunately all previous works are covered under NDAs, but open-source projects to follow in the future</p>
+          <p>Unfortunately most previous works are covered under NDAs, but below are some open-source projects I've done part-time.</p>
         </div>
-        <!--
+        
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-finance">Finance</li>
+              <!--<li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-web">Web</li>-->
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-finance">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1/chart-analysis-portfolio-details.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-1/chart-analysis-portfolio-details.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Stonks"><i class="bx bx-plus"></i></a>
+                <a href="luxor-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+          <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -543,9 +547,9 @@
               </div>
             </div>
           </div>
-
+          -->
         </div>
-        -->
+        
       </div>
     </section><!-- End Portfolio Section -->
 
