fixed github link for luxor portfolio

--- a/luxor-details.html
+++ b/luxor-details.html
@@ -109,7 +109,7 @@
               <li><strong>Category</strong>: Automated Trader</li>
               <li><strong>Client</strong>: NMRQL Research</li>
               <li><strong>Project date</strong>: November 2020 - December 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">https://github.com/jeanpierrevanzyl/LUXOR-trader</a></li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/jeanpierrevanzyl/LUXOR-trader">Github Page</a></li>
             </ul>
           </div>
 
