added xournalpp to portfolio section

--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-finance">Finance</li>
-              <!--<li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>-->
+              <li data-filter=".filter-afrikaans">Afrikaans</li>
+              <!--<li data-filter=".filter-web">Web</li>-->
             </ul>
           </div>
         </div>
@@ -451,26 +451,26 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-finance">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1/chart-analysis-portfolio-details.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-luxor/chart-analysis-portfolio-details.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1/chart-analysis-portfolio-details.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="assets/img/portfolio/portfolio-luxor/chart-analysis-portfolio-details.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Stonks"><i class="bx bx-plus"></i></a>
                 <a href="luxor-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-          <!--
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-afrikaans">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-xournalpp/background.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-xournalpp/background.png" data-gall="portfolioGallery" class="venobox"
+                  title="Xournal++"><i class="bx bx-plus"></i></a>
+                <a href="xournalpp-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+          <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
