--- a/xournalpp-details.html
+++ b/xournalpp-details.html
@@ -81,10 +81,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>LUXOR Trader Details</h2>
+          <h2>Xournal++ Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>LUXOR Trader Details</li>
+            <li>Xournal++ Details</li>
           </ol>
         </div>
 
@@ -98,31 +98,28 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio/portfolio-luxor/sonks-portfolio-details.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-luxor/new-approach-trading-cover.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-luxor/chart-analysis-portfolio-details.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-xournalpp/background.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Automated Trader</li>
-              <li><strong>Client</strong>: NMRQL Research</li>
-              <li><strong>Project date</strong>: November 2020 - December 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/jeanpierrevanzyl/LUXOR-trader">Github Page</a></li>
+              <li><strong>Category</strong>: Open-Source contribution</li>
+              <li><strong>Client</strong>: None</li>
+              <li><strong>Project date</strong>: July 2021 - </li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/xournalpp/xournalpp">Github Page</a></li>
+              <li><strong>Project website</strong>: <a href="https://xournalpp.github.io">Website</a></li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>LUXOR Trading system</h2>
+          <h2>Xournal++</h2>
           <p>
-            This repo contains a clone of the LUXOR trading system, written in Python, as described by Emilio Tomasini and Urban Jaekle.
-
-            This was a part-time project and is not intended for commercial use or distribution. All works contained in this repo are for educational purposes and should not be used to make real-world financial decisions.
-
-            This is not financial advice nor should it be used to gather stock insights
+            I have been sporadically contributing to the implementation of Afrikaans in open-source projects.
+            Xournal++ is a editor which I use to make notes and to draw on PDF files.
+            Using Crowdin, I have helped to transalte the user interface elements into Afrikaans.
           </p>
         </div>
 
