--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
               </div>
 
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.745467432545!2d18.864397989946877!3d-33.929554549513945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcdb2664ed69f07%3A0xf377c3ed48c3ce72!2sGeneral%20Engineering%20Building!5e0!3m2!1sen!2sza!4v1611506426457!5m2!1sen!2sza"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1655.2260607353974!2d18.86533721489002!3d-33.92949781368444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcdb266373348d9%3A0x29f2735c69781c84!2sEngineering%20Knowledge%20Centre!5e0!3m2!1sen!2sza!4v1642606192300!5m2!1sen!2sza"
                 frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
