Header and new Article
Added universal header using JS,
Added WCCI article link and description, will add pdf once camera ready
version is released

--- a/header_footer.html
+++ b/header_footer.html
@@ -6,11 +6,9 @@
             <a href="index.html"><img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle"></a>
             <h1 class="text-light"><a href="index.html">Jean-Pierre van Zyl</a></h1>
             <div class="social-links mt-3 text-center">
-                <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i
-                        class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                 <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
-                <a href="https://www.researchgate.net/profile/Jean_Pierre_Van_Zyl" class="researchgate"><i
-                        class="bx bx-pen"></i></a>
+                <a href="https://scholar.google.com/citations?user=SVc16t8AAAAJ" class="bx bxl-google"><i class="bx bx-pencil-square"></i></a>
             </div>
         </div>
 
