--- a/index.html
+++ b/index.html
@@ -44,35 +44,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <div class="d-flex flex-column">
-
-        <div class="profile">
-            <a href="index.html"><img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle"></a>
-            <h1 class="text-light"><a href="index.html">Jean-Pierre van Zyl</a></h1>
-            <div class="social-links mt-3 text-center">
-                <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i
-                        class="bx bxl-linkedin"></i></a>
-                <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
-                <a href="https://www.researchgate.net/profile/Jean_Pierre_Van_Zyl" class="researchgate"><i
-                        class="bx bx-pen"></i></a>
-            </div>
-        </div>
-
-        <nav class="nav-menu">
-            <ul>
-                <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-                <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-                <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-                <li><a href="#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
-                <li><a href="#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
-                <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-                <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
-
-            </ul>
-        </nav><!-- .nav-menu -->
-        <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-    </div>
+    <script src="header.js"></script>
   </header>
   <!-- End Header -->
 
@@ -390,13 +362,16 @@
               This algorithm was applied to solve regression problems and published for the <a href="http://www.iasei.org/icsi2021/" target="_blank">International Conference on Swarm Intelligence (2021)</a>.
             </p>
           </div>
-          <!--
+          
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat tarad limino ata</p>
+            <div class="icon"><i class="bx bxs-book"></i></div>
+            <h4 class="title"><a href="" target="_blank">Rule Induction Using Set-Based Particle Swarm Optimisation</a></h4>
+            <p class="description">
+              The SBPSO algorithm was successfully applied to induce rule sets on categorical data to allow for transparent classification for critical industries.
+              This work has been published at the <a href="https://wcci2022.org/" target="_blank">IEEE World Congress On Computational Intelligence (2022)</a>.
+            </p>
           </div>
+          <!--
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-earth"></i></div>
             <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
@@ -570,7 +545,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Enginering Faculty, Stellenbosch University, Stellenbosch 7600</p>
+                <p>Media Lab, Engineering Faculty, Stellenbosch University, Stellenbosch 7600</p>
               </div>
 
               <div class="email">
@@ -638,18 +613,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+    <script src="footer.js"></script>
   </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
