--- a/luxor-details.html
+++ b/luxor-details.html
@@ -42,35 +42,7 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <div class="d-flex flex-column">
-
-        <div class="profile">
-            <a href="index.html"><img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle"></a>
-            <h1 class="text-light"><a href="index.html">Jean-Pierre van Zyl</a></h1>
-            <div class="social-links mt-3 text-center">
-                <a href="https://www.linkedin.com/in/jeanpierrevanzyl/" class="linkedin"><i
-                        class="bx bxl-linkedin"></i></a>
-                <a href="https://www.github.com/jeanpierrevanzyl/" class="github"><i class="bx bxl-github"></i></a>
-                <a href="https://www.researchgate.net/profile/Jean_Pierre_Van_Zyl" class="researchgate"><i
-                        class="bx bx-pen"></i></a>
-            </div>
-        </div>
-
-        <nav class="nav-menu">
-            <ul>
-                <li class="active"><a href="index.html#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-                <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-                <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-                <li><a href="index.html#research"><i class="bx bx-pie-chart-alt-2"></i><span>Research</span></a></li>
-                <li><a href="index.html#publications"><i class="bx bx-book-open"></i><span>Publications</span></a></li>
-                <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-                <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
-
-            </ul>
-        </nav><!-- .nav-menu -->
-        <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-    </div>
+    <script src="header.js"></script>
   </header>
   <!-- End Header -->
 
@@ -133,18 +105,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
+    <script src="footer.js"></script>
   </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
