added new paper

--- a/index.html
+++ b/index.html
@@ -354,6 +354,16 @@
         </div>
 
         <div class="row">
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="bx bxs-book"></i></div>
+            <h4 class="title"><a href="assets/documents/RiSBPSO.pdf" target="_blank">Rule Induction Using Set-Based Particle Swarm Optimisation</a></h4>
+            <p class="description">
+              The SBPSO algorithm was successfully applied to induce rule sets on categorical data to allow for transparent classification for critical industries.
+              This work has been published at the <a href="https://wcci2022.org/" target="_blank">IEEE World Congress On Computational Intelligence (2022)</a>.
+            </p>
+          </div>
+
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bxs-book"></i></div>
             <h4 class="title"><a href="assets/documents/SBPSO_for_polynomial_induction.pdf" target="_blank">Polynomial Approximation Using Set-Based Particle Swarm Optimization</a></h4>
@@ -363,14 +373,6 @@
             </p>
           </div>
           
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bx bxs-book"></i></div>
-            <h4 class="title"><a href="" target="_blank">Rule Induction Using Set-Based Particle Swarm Optimisation</a></h4>
-            <p class="description">
-              The SBPSO algorithm was successfully applied to induce rule sets on categorical data to allow for transparent classification for critical industries.
-              This work has been published at the <a href="https://wcci2022.org/" target="_blank">IEEE World Congress On Computational Intelligence (2022)</a>.
-            </p>
-          </div>
           <!--
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-earth"></i></div>
