--- a/luxor-details.html
+++ b/luxor-details.html
@@ -42,7 +42,6 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <script src="header.js"></script>
   </header>
   <!-- End Header -->
 
@@ -105,8 +104,8 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <script src="footer.js"></script>
-  </footer><!-- End  Footer -->
+  </footer>
+  <!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
@@ -125,6 +124,11 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+  </script>
 
 </body>
 
