added m degree to website

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <p><em>Brief overview of experience</em></p>
               <ul>
                 <li><a href="/assets/documents/jeanpierrevanzyl_cv.pdf" target="_blank">Download CV</a></li>
-                <li>Currently hold BSc (Hons) in Computer Science</li>
+                <li>Currently hold MSc in Computer Science</li>
                 <li>Work experience consists of multiple internships</li>
                 <li>Multiple years spent serving on student leadership</li>
               </ul>
@@ -207,12 +207,24 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Science in Computer Science (In progress)</h4>
-              <h5>2021 - </h5>
+              <h4>PhD in Science in Computer Science (In progress)</h4>
+              <h5>2023 - </h5>
               <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
               <ul>
                 <li>Currently studying under Professor A.P. Engelbrecht</li>
               </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Master of Science in Computer Science (Cum Laude)</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>Stellenbosch University, Stellenbosch, RSA</em></p>
+              <ul>
+                <li>Obained Cum Laude</li>
+                <li><a id="masters-hyperlink" href="javascript:hideshowMasters();">View Degree</a></li>
+              </ul>
+              <div id="masters-hidden-div" class="hidden-div">
+                <img src="/assets/img/masters.png" class="img-fluid" alt="">
+              </div>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science (Honours) in Computer Science (Cum Laude)</h4>
